sandbox/output
StringCalculatorTest.java:31: error: cannot find symbol
    @Rule ExpectedException thrown = ExpectedException.none();
          ^
  symbol:   class ExpectedException
  location: class StringCalculatorTest
StringCalculatorTest.java:31: error: cannot find symbol
    @Rule ExpectedException thrown = ExpectedException.none();
                                     ^
  symbol:   variable ExpectedException
  location: class StringCalculatorTest
2 errors
